tests/negative/test_data_redef.orb
data Foo {
    i32 x;
}

data Foo {
    i32 x;
}

fnc main() {}